apps/webui/github-markdown.css
/* ... */
.md-content {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  color: var(--fgColor-default);
  font-family: inherit;
  font-size: 14px;
  line-height: 1.5;
  word-wrap: break-word;
  overflow-wrap: anywhere;
}

.md-content .octicon {
  display: inline-block;
  fill: currentColor;
  vertical-align: text-bottom;
}

.md-content h1:hover .anchor .octicon-link:before,
.md-content h2:hover .anchor .octicon-link:before,
.md-content h3:hover .anchor .octicon-link:before,
.md-content h4:hover .anchor .octicon-link:before,
.md-content h5:hover .anchor .octicon-link:before,
.md-content h6:hover .anchor .octicon-link:before {
  width: 16px;
  height: 16px;
  content: ' ';
  display: inline-block;
  background-color: currentColor;
  -webkit-mask-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' version='1.1' aria-hidden='true'><path fill-rule='evenodd' d='M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z'></path></svg>");
  mask-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' version='1.1' aria-hidden='true'><path fill-rule='evenodd' d='M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z'></path></svg>");
}

.md-content details,
.md-content figcaption,
.md-content figure {
  display: block;
}

.md-content summary {
  display: list-item;
}

.md-content [hidden] {
  display: none !important;
}

.md-content a {
  background-color: transparent;
  color: var(--fgColor-accent);
  text-decoration: none;
  overflow-wrap: anywhere;
  word-break: break-all;
}

.md-content abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.md-content b,
.md-content strong {
  font-weight: var(--base-text-weight-semibold, 600);
}

.md-content dfn {
  font-style: italic;
}

.md-content h1 {
  margin: .5em 0 .25em;
  font-weight: var(--base-text-weight-semibold, 600);
  padding-bottom: .2em;
  font-size: 1.3em;
  border-bottom: 1px solid var(--borderColor-muted);
}

.md-content mark {
  background-color: var(--bgColor-attention-muted);
  color: var(--fgColor-default);
}

.md-content small {
  font-size: 90%;
}

.md-content sub,
.md-content sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.md-content sub {
  bottom: -0.25em;
}

.md-content sup {
  top: -0.5em;
}

.md-content img {
  border-style: none;
  max-width: 100%;
  box-sizing: content-box;
}

.md-content code,
.md-content kbd,
.md-content pre,
.md-content samp {
  font-family: monospace;
  font-size: 1em;
}

.md-content figure {
  margin: 1em var(--base-size-40);
}

.md-content hr {
  box-sizing: content-box;
  overflow: hidden;
  background: transparent;
  border-bottom: 1px solid var(--borderColor-muted);
  height: 1px;
  padding: 0;
  margin: var(--base-size-24) 0;
  background-color: var(--borderColor-default);
  border: 0;
}

.md-content input {
  font: inherit;
  margin: 0;
  overflow: visible;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

.md-content [type=button],
.md-content [type=reset],
.md-content [type=submit] {
  -webkit-appearance: button;
  appearance: button;
}

.md-content [type=checkbox],
.md-content [type=radio] {
  box-sizing: border-box;
  padding: 0;
}

.md-content [type=number]::-webkit-inner-spin-button,
.md-content [type=number]::-webkit-outer-spin-button {
  height: auto;
}

.md-content [type=search]::-webkit-search-cancel-button,
.md-content [type=search]::-webkit-search-decoration {
  -webkit-appearance: none;
  appearance: none;
}

.md-content ::-webkit-input-placeholder {
  color: inherit;
  opacity: .54;
}

.md-content ::-webkit-file-upload-button {
  -webkit-appearance: button;
  appearance: button;
  font: inherit;
}

.md-content a:hover {
  text-decoration: underline;
}

.md-content ::placeholder {
  color: var(--fgColor-muted);
  opacity: 1;
}

.md-content hr::before {
  display: table;
  content: "";
}

.md-content hr::after {
  display: table;
  clear: both;
  content: "";
}

.md-content table {
  border-spacing: 0;
  border-collapse: collapse;
  display: block;
  width: max-content;
  max-width: 100%;
  overflow: auto;
  font-variant: tabular-nums;
}

.md-content td,
.md-content th {
  padding: 0;
}

.md-content details summary {
  cursor: pointer;
}

.md-content a:focus,
.md-content [role=button]:focus,
.md-content input[type=radio]:focus,
.md-content input[type=checkbox]:focus {
  outline: 2px solid var(--focus-outlineColor);
  outline-offset: -2px;
  box-shadow: none;
}

.md-content a:focus:not(:focus-visible),
.md-content [role=button]:focus:not(:focus-visible),
.md-content input[type=radio]:focus:not(:focus-visible),
.md-content input[type=checkbox]:focus:not(:focus-visible) {
  outline: solid 1px transparent;
}

.md-content a:focus-visible,
.md-content [role=button]:focus-visible,
.md-content input[type=radio]:focus-visible,
.md-content input[type=checkbox]:focus-visible {
  outline: 2px solid var(--focus-outlineColor);
  outline-offset: -2px;
  box-shadow: none;
}

.md-content a:not([class]):focus,
.md-content a:not([class]):focus-visible,
.md-content input[type=radio]:focus,
.md-content input[type=radio]:focus-visible,
.md-content input[type=checkbox]:focus,
.md-content input[type=checkbox]:focus-visible {
  outline-offset: 0;
}
/* ... */

